syntax = "proto3";
package images.v1;
option go_package = "github.com/anyuan-chen/colormatch/gen/proto/go/images/v1;imagesv1";

import "shared/v1/main.proto";

message GetBackgroundColorRequest {
    shared.v1.Image image = 1;
    shared.v1.Palette palette = 2;
    shared.v1.Palette background_colors = 3;
}
message GetBackgroundColorResponse {
    shared.v1.Color color = 1;
}
message GetHighlightColorRequest {
    shared.v1.Image image = 1;
    shared.v1.Palette palette = 2;
    shared.v1.Palette highlight_colors = 3;
}
message GetHighlightColorResponse{
    shared.v1.Color color = 1;
}
service PaletteMatchingService {
    rpc GetBackgroundColor(GetBackgroundColorRequest) returns (GetBackgroundColorResponse);
    rpc GetHighlightColor(GetHighlightColorRequest) returns (GetHighlightColorResponse);
}