syntax = "proto3";
package shared.v1;
option go_package = "github.com/anyuan-chen/colormatch/gen/proto/go/shared/v1;sharedv1";
message Color {
    string hex_code = 1;
}
message Palette {
    repeated Color color = 1;
}
message Image {
    int32 width = 1;
    int32 height = 2;
    bytes image_data = 3;
}